<resources>
    <string name="include_screenshoot_feedback_details">Send screenshot of the last page you were on</string>
    <string name="include_screenshoot_feedback">Include screenshot</string>
    <string name="privacy_information_feedback_details">How is my information stored and shared</string>
    <string name="privacy_information_feedback">Privacy information</string>
    <string name="include_data_feedback">Include system data</string>
    <string name="include_data_feedback_details">Share system data with us to better diagnose the problem.</string>
    <string name="action_settings">Settings</string>
    <string name="newsletter_pensioner">pensioner</string>
    <string name="newsletter_employee">employee</string>
    <string name="app_name">newsletters</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">A new version %1$s available!</string>
    <string name="gcm_newsletter_message">News! newsletter: \"%1$s\" have been uploaded</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="dialog_close">Close</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_favorites">Favorites</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Sort alphabetically</string>
    <string name="action_bar_sort_size">Sort by size</string>
    <string name="action_bar_sort_date">Sort by date</string>
    <string name="action_bar_share_with">Share with...</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_switch_view">Switch view</string>
    <string name="action_bar_grid_view">Grid view</string>
    <string name="action_bar_list_view">List view</string>
    <string name="action_bar_carousel_view">Carousel view</string>
    <string name="action_menu_content">More</string>
    <string name="empty_newsletter">No newsletter found</string>
    <string name="title_activity_newsletter_list">NewsletterListActivity</string>
    <string name="title_activity_fragment_vs_pager">Letter</string>
    <string name="title_activity_tab_screen">TabScreen</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="status_download">download</string>
    <string name="status_open">open</string>
    <string name="status_downloading">downloading</string>
    <string name="about_title">About</string>
    <string name="about_description">The BP Pensions newsletter application</string>
    <string name="about_version">Version</string>
    <string name="about_manage_agent">BP Contact</string>
    <string name="about_manager">Nigel Johnson</string>
    <string name="about_develop_agent">Developed By</string>
    <string name="about_company">Claybourne McGregor (C-MG)</string>
    <string name="about_developers">developers</string>
    <string name="about_developer1">Hai Lu</string>
    <string name="about_developer2">Long Nguyen</string>
    <string name="about_project">project manager</string>
    <string name="about_project_manager">Anh Nguyen</string>
    <string name="about_test">test leader</string>
    <string name="about_test_leader">Huong Vu</string>
    <string name="about_ba">business analyst</string>
    <string name="about_ba_name">Elaine Dimon</string>
    <string name="about_agent">pdf viewer licensed by</string>
    <string name="about_cmg">Claybourne McGregor</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="share_title">Share</string>
    <string name="share_description">Scan the QR code or email share </string>
    <string name="share_link">here</string>
    <string name="feedback_title">Feedback</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="license_title">License</string>
    <string name="license_description">Version 1.0, January 2013</string>
    <string name="help_title">Help</string>
    <string name="help_description">The list below details the icons and their actions:</string>
    <string name="help_newsletter">Newsletter, touch to open</string>
    <string name="help_download">Download, touch to activate</string>
    <string name="help_progress">Download in progress</string>
    <string name="help_share">Share this application with others</string>
    <string name="help_search">Search by title or description</string>
    <string name="help_view_grid">Display as a grid</string>
    <string name="help_view_list">Display as a list</string>
    <string name="help_view_carousel">Display as a carousel</string>
    <string name="help_sort_date">Sort by date</string>
    <string name="help_sort_az">Sort by title</string>
    <string name="help_sort_size">Sort by size</string>
    <string name="title_changelog">Changelog</string>
    <string name="preferences_title">Settings</string>
    <string name="other_preferences">Other</string>
    <string name="mainpage_preferences">Newsletter display</string>
    <string name="summary_list_view_choice">How newsletters present on main page</string>
    <string name="dialog_title_list_view_choice">Select view type</string>
    <string name="summary_list_sort_choice">How newsletters sort on main page</string>
    <string name="dialog_title_list_sort_choice">Select sort type</string>
    <string name="title_parent_checkbox_report">Send report to developer</string>
    <string name="summary_parent_checkbox_report">Help us to make your experience better</string>
    <string name="summary_child_send_errors"></string>
    <string name="title_child_send_errors">Send errors</string>
    <string name="summary_child_send_statistics"></string>
    <string name="title_child_send_statistics">Send statistical data</string>
</resources>