<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013. CMG Ltd All rights reserved.
  ~
  ~ This software is the confidential and proprietary information of CMG
  ~ ("Confidential Information"). You shall not disclose such Confidential
  ~ Information and shall use it only in accordance with the terms of the
  ~ license agreement you entered into with CMG.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <PreferenceCategory android:title="@string/newsletter_category_preferences" > -->
    <!-- <CheckBoxPreference -->
    <!-- android:defaultValue="true" -->
    <!-- android:key="checkbox_newsletter_pensioner" -->
    <!-- android:summary="@string/summary_checkbox_newsletter_pensioner" -->
    <!-- android:title="@string/title_checkbox_newsletter_pensioner" /> -->
    <!-- <CheckBoxPreference -->
    <!-- android:key="checkbox_newsletter_employee" -->
    <!-- android:summary="@string/summary_checkbox_newsletter_employee" -->
    <!-- android:title="@string/title_checkbox_newsletter_employee" /> -->
    <PreferenceCategory></PreferenceCategory>
    <PreferenceCategory android:title="@string/mainpage_preferences">
        <ListPreference
            android:defaultValue="list_view"
            android:dialogTitle="@string/dialog_title_list_view_choice"
            android:entries="@array/entries_view_choice"
            android:entryValues="@array/entryvalues_view_choice"
            android:icon="@drawable/ic_menu_list_view"
            android:key="list_view_choice"
            android:summary="@string/summary_list_view_choice"
            android:title="@string/action_bar_list_view" />
        <ListPreference
            android:defaultValue="sort_by_date"
            android:dialogTitle="@string/dialog_title_list_sort_choice"
            android:entries="@array/entries_sort_choice"
            android:entryValues="@array/entryvalues_sort_choice"
            android:icon="@android:drawable/ic_menu_today"
            android:key="list_sort_choice"
            android:summary="@string/summary_list_sort_choice"
            android:title="@string/action_bar_sort_date" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_preferences">
        <Preference
            android:key="changelog_preferences"
            android:title="@string/title_changelog" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="parent_checkbox_report_parent"
            android:summary="@string/summary_parent_checkbox_report"
            android:title="@string/title_parent_checkbox_report" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="parent_checkbox_report_parent"
            android:key="child_checkbox_send_errors"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_child_send_errors"
            android:title="@string/title_child_send_errors" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="parent_checkbox_report_parent"
            android:key="child_checkbox_send_statistics"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_child_send_statistics"
            android:title="@string/title_child_send_statistics" />
    </PreferenceCategory>

</PreferenceScreen>