<?xml version="1.0" encoding="UTF-8"?><!--
  ~ Copyright (c) 2013. CMG Ltd All rights reserved.
  ~
  ~ This software is the confidential and proprietary information of CMG
  ~ ("Confidential Information"). You shall not disclose such Confidential
  ~ Information and shall use it only in accordance with the terms of the
  ~ license agreement you entered into with CMG.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/action_bar_search" />
    <item
        android:id="@+id/action_switch_view"
        android:icon="@drawable/ic_menu_grid_view"
        android:showAsAction="always"
        android:title="@string/action_bar_switch_view">
        <menu>
            <item
                android:id="@+id/action_switch_grid"
                android:icon="@drawable/ic_menu_grid_view"
                android:title="@string/action_bar_grid_view" />
            <item
                android:id="@+id/action_switch_list"
                android:icon="@drawable/ic_menu_list_view"
                android:title="@string/action_bar_list_view" />
            <item
                android:id="@+id/action_switch_carosuel"
                android:icon="@drawable/ic_menu_carousel_view"
                android:title="@string/action_bar_carousel_view" />
        </menu>
    </item>
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:showAsAction="always"
        android:title="@string/action_bar_sort">
        <menu>
            <item
                android:id="@+id/action_sort_size"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="@string/action_bar_sort_size" />
            <item
                android:id="@+id/action_sort_alpha"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/action_bar_sort_alpha" />
            <item
                android:id="@+id/action_sort_date"
                android:icon="@android:drawable/ic_menu_today"
                android:title="@string/action_bar_sort_date" />
        </menu>
    </item>
    <item
        android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never|withText"
        android:title="@string/preferences_title" />
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="never|withText"
        android:title="@string/help_title" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="never|withText"
        android:title="@string/share_title" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never|withText"
        android:title="@string/about_title" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_menu_compose"
        android:showAsAction="never|withText"
        android:title="@string/feedback_title" />

</menu>