<?xml version="1.0" encoding="UTF-8"?><!--
  ~ Copyright (c) 2013. CMG Ltd All rights reserved.
  ~
  ~ This software is the confidential and proprietary information of CMG
  ~ ("Confidential Information"). You shall not disclose such Confidential
  ~ Information and shall use it only in accordance with the terms of the
  ~ license agreement you entered into with CMG.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never|withText"
        android:title="@string/preferences_title" />
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="never|withText"
        android:title="@string/help_title" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="never|withText"
        android:title="@string/share_title" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never|withText"
        android:title="@string/about_title" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_menu_compose"
        android:showAsAction="never|withText"
        android:title="@string/feedback_title" />

</menu>