<!--
  ~ Copyright (c) 2013. CMG Ltd All rights reserved.
  ~
  ~ This software is the confidential and proprietary information of CMG
  ~ ("Confidential Information"). You shall not disclose such Confidential
  ~ Information and shall use it only in accordance with the terms of the
  ~ license agreement you entered into with CMG.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".HelpActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1.05"
            android:text="@string/help_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/help_title"
            android:src="@drawable/help_icon" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="67dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_newsletter"
                    android:src="@drawable/help_pdf" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_newsletter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tableRow1"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_download"
                    android:src="@drawable/help_download" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/help_download"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableRow3"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_search"
                    android:src="@android:drawable/ic_menu_search" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/help_search"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableRow4"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@drawable/ic_menu_grid_view" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_view_grid"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableRow5"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@drawable/ic_menu_list_view" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_view_list"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/tableRow6"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView04"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@drawable/ic_menu_carousel_view" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_view_carousel"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/tableRow7"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView05"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@android:drawable/ic_menu_sort_alphabetically" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_sort_az"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/tableRow8"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView07"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@android:drawable/ic_menu_sort_by_size" />

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_sort_size"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/tableRow9"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/ImageView06"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_progress"
                    android:src="@android:drawable/ic_menu_today" />

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_sort_date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/tableRow10"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/help_share"
                    android:src="@android:drawable/ic_menu_share" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_share"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>